[package]
name = "libcraft"
version = "0.0.2"
authors = ["Alexander Hayden", "Dylan Jones <dylanjones2011@gmail.com>"]
edition = "2018"

[dependencies]
regex = "^1"
warp = "0.2.2"
serde = { version = "^1.0", features = ["derive"]}
serde_yaml = "^0.8"
serde_json = "^1.0"
tokio = { version = "^0.2", features = ["macros"] }
once_cell = "^1.4"
libc = "^0.2"